# blockhash

./: README.md  main.c
.kdev4/: blockhash.kdev4
src/: Makefile.am  Makefile.in  Makefile.kdev4  blockhash.c  blockhash.h  bmp_image.h  main.c  misc.c  phs.h  phs_dct_image_hash.c  phs_endian.h  phs_swap.h  process_image.c  process_video.c  processing.h  version.h
src/.kdev4/: blockhash.kdev4
testdata/: video-quick-hashes.txt
